# nixblitz-cli

./: .gitignore  flake.nix  justfile
crates/nixblitz_cli/: default.nix
crates/nixblitz_cli/src/: errors.rs  logging.rs  tui.rs  tui_components.rs  tui_shared.rs
crates/nixblitz_cli/src/tui_components/: configurator.rs  spinner.rs  text_input_popup.rs
crates/nixblitz_cli/src/tui_components/install/: configurator_screen.rs  install_disk_selection.rs  install_success.rs  pre_install_confirm.rs  welcome.rs
crates/nixblitz_cli/src/tui_components/list/: selectable_list.rs
crates/nixblitz_installer_engine/src/: engine.rs
crates/nixblitz_norupo/: Cargo.toml  default.nix  input.css
crates/nixblitz_norupo/assets/: tailwind.css
crates/nixblitz_norupo/src/: constants.rs
crates/nixblitz_norupo/src/components/: app.rs
crates/nixblitz_norupo/src/components/install/: installing.rs
crates/nixblitz_norupo/src/pages/: config.rs  install.rs
crates/nixblitz_system/: Cargo.toml
crates/nixblitz_system/src/: installer.rs  utils.rs
crates/nixblitz_system/src/template/src/: flake.nix
docs/: default.nix
docs/docs/: 02_overview.md  03_install.md
installer/: configuration.nix  flake.nix
installer/nix_store_cfg/: configuration.common.nix  flake.nix
modules/: nixblitz_norupo.nix
scripts/: jj_helpers.nix  update-default-nix.nu
