[package]
name = "nixblitz_norupo"
description = "A web UI for the NixBlitz project."
version = "0.1.0"
authors = ["fusion44 <git.bleep096@passmail.net>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nixblitz_core = { workspace = true }
nixblitz_system = { workspace = true, optional = true }
dioxus = { version = "0.7.0-rc.0", features = ["router", "fullstack"] }
dioxus-logger = "0.6.2"
error-stack = "0.5.0"
web-sys = { version = "0.3.77", features = ["console"] }
gloo-net = "0.6.0"
serde_json = "1.0.140"
futures = "0.3.31"

[features]
default = ["web"]
web = ["dioxus/web"]
desktop = ["dioxus/desktop"]
mobile = ["dioxus/mobile"]
server = ["dioxus/server", "dep:nixblitz_system"]
